--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   voice_note_kit: ^1.3.3
   youtube_player_flutter: ^9.1.2
   pretty_dio_logger: ^1.4.0
+  curved_navigation_bar: ^1.0.6
   talker_flutter: ^5.0.0
 
   dartz: ^0.10.0
