--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,7 +77,8 @@ dependencies:
   dartz: ^0.10.0
   audioplayers: ^6.5.1
   video_player: ^2.8.2
-
+  get: ^4.7.2
+  salomon_bottom_bar: ^3.3.2
   permission_handler: ^12.0.1
   syncfusion_flutter_pdfviewer: ^31.1.19
   device_info_plus: ^11.5.0
