--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   country_picker: 2.0.27
   dotted_border: ^3.1.0
   dropdown_search: 6.0.2
+  flutter_animate: ^4.5.2
   flutter_image_compress: ^2.0.4
   flutter_screenutil: ^5.9.3
 
