--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dependencies:
   permission_handler: ^12.0.1
   syncfusion_flutter_pdfviewer: ^31.1.19
   device_info_plus: ^11.5.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   freezed: ^3.0.0
