--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   dartz: ^0.10.0
   audioplayers: ^6.5.1
   video_player: ^2.8.2
+  photo_view: ^0.15.0
   get: ^4.7.2
   salomon_bottom_bar: ^3.3.2
   permission_handler: ^12.0.1
