--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,129 +1,146 @@
+
 name: seraj_aldean_flutter_app
 description: "this app for the shaik seraj al dean"
-
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
 version: 1.0.0+1
-
 environment:
   sdk: ^3.6.1
-
 dependencies:
+
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-  android_intent_plus: ^6.0.0
-  flutter_gen: ^5.11.0
-  dio: ^5.9.0
-  marquee: ^2.3.0
+  # ──────────────────────────────────────────────────────────────────────────────
+  # State Management & Architecture
+  # ──────────────────────────────────────────────────────────────────────────────
   flutter_bloc: ^9.1.1
-  shared_preferences: ^2.5.3
-  cached_network_image: ^3.4.1
-  collection: ^1.17.2
-  country_picker: 2.0.27
-  dotted_border: ^3.1.0
-  dropdown_search: 6.0.2
-  flutter_animate: ^4.5.2
-  flutter_image_compress: ^2.0.4
-  flutter_screenutil: ^5.9.3
-
-  flutter_slidable: ^4.0.1
-  flutter_speed_dial: ^7.0.0
-  flutter_spinkit: ^5.2.2
-  flutter_staggered_grid_view: 0.7.0
-  flutter_svg: ^2.2.0
-  freezed_annotation: ^3.1.0
-
   get_it: ^8.2.0
-  go_router: ^16.2.0
-  google_fonts: ^6.3.1
-  google_maps_flutter: ^2.12.3
-  image_picker: ^1.2.0
-
-  infinite_scroll_pagination: ^5.1.1
   injectable: ^2.5.1
-  intl: ^0.20.2
-  json_annotation: 4.9.0
-  json_serializable: ^6.1.4
-  loading_animation_widget: 1.3.0
-  logger: ^2.6.1
-
-  lottie: 3.3.1
-  path: 1.9.1
-  path_provider: 2.1.5
-  pdf: 3.11.3
-  skeletonizer: ^2.1.0+1
-  text_scroll: 0.2.0
-  uuid: 4.5.1
-  flutter_launcher_icons: ^0.13.1
-
   equatable: ^2.0.7
-  flutter_localization: ^0.3.3
-  staggered_grid_view: ^0.0.1
-  xml: ^6.6.1
-  share_plus: ^11.1.0
-
-  rename: ^3.0.2
-  flutter_colorpicker: ^1.1.0
-  voice_note_kit: ^1.3.3
-  youtube_player_flutter: ^9.1.2
-  pretty_dio_logger: ^1.4.0
-  curved_navigation_bar: ^1.0.6
-  talker_flutter: ^5.0.0
-
+  freezed_annotation: ^3.1.0
   dartz: ^0.10.0
+  get: ^4.7.2
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Network & API
+  # ──────────────────────────────────────────────────────────────────────────────
+  dio: ^5.9.0
+  pretty_dio_logger: ^1.4.0
+  cached_network_image: ^3.4.1
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Navigation & Routing
+  # ──────────────────────────────────────────────────────────────────────────────
+  go_router: ^16.2.0
+  # ──────────────────────────────────────────────────────────────────────────────
+  # UI Components & Widgets
+  # ──────────────────────────────────────────────────────────────────────────────
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.2.0
+  flutter_animate: ^4.5.2
+  skeletonizer: ^2.1.0+1
+  lottie: 3.3.1
+  marquee: ^2.3.0
+  salomon_bottom_bar: ^3.3.2
+  dropdown_search: 6.0.2
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Media & Documents
+  # ──────────────────────────────────────────────────────────────────────────────
   audioplayers: ^6.5.1
   video_player: ^2.8.2
+  youtube_player_flutter: ^9.1.2
+  voice_note_kit: ^1.3.3
   photo_view: ^0.15.0
-  get: ^4.7.2
-  salomon_bottom_bar: ^3.3.2
-  permission_handler: ^12.0.1
   syncfusion_flutter_pdfviewer: ^31.1.19
-  device_info_plus: ^11.5.0
-  url_launcher: ^6.3.0
+  pdf: 3.11.3
 
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Image & File Handling
+  # ──────────────────────────────────────────────────────────────────────────────
+  flutter_launcher_icons: ^0.13.1
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Storage & Data Persistence
+  # ──────────────────────────────────────────────────────────────────────────────
+  shared_preferences: ^2.5.3
+  path_provider: 2.1.5
+  path: 1.9.1
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Serialization & Data Handling
+  # ──────────────────────────────────────────────────────────────────────────────
+  json_annotation: 4.9.0
+  json_serializable: ^6.1.4
+  xml: ^6.6.1
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Localization & Internationalization
+  # ──────────────────────────────────────────────────────────────────────────────
+  flutter_localization: ^0.3.3
+  intl: ^0.20.2
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Utilities & Helpers
+  # ──────────────────────────────────────────────────────────────────────────────
+  flutter_gen: ^5.11.0
+  google_fonts: ^6.3.1
+  logger: ^2.6.1
+  talker_flutter: ^5.0.0
+
+  permission_handler: ^12.0.1
+  url_launcher: ^6.3.0
+  share_plus: ^11.1.0
+  rename: ^3.0.2
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Platform Specific
+  # ──────────────────────────────────────────────────────────────────────────────
+  android_intent_plus: ^6.0.0
+  google_maps_flutter: ^2.12.3
+
+# ════════════════════════════════════════════════════════════════════════════════
+# DEV DEPENDENCIES
+# ════════════════════════════════════════════════════════════════════════════════
 dev_dependencies:
-  freezed: ^3.0.0
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Testing
+  # ──────────────────────────────────────────────────────────────────────────────
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Code Generation
+  # ──────────────────────────────────────────────────────────────────────────────
   build_runner: ^2.7.0
+  freezed: ^3.0.0
   flutter_gen_runner: ^5.11.0
+
+  # ──────────────────────────────────────────────────────────────────────────────
+  # HTML & Web
+  # ──────────────────────────────────────────────────────────────────────────────
   flutter_html: ^3.0.0
   html: ^0.15.0
 
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
+# ════════════════════════════════════════════════════════════════════════════════
+# FLUTTER CONFIGURATION
+# ════════════════════════════════════════════════════════════════════════════════
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Assets
+  # ──────────────────────────────────────────────────────────────────────────────
   assets:
     - assets/images/
     - assets/svg/
     - assets/lottie/
 
+  # ──────────────────────────────────────────────────────────────────────────────
+  # Fonts
+  # ──────────────────────────────────────────────────────────────────────────────
   fonts:
     - family: Amiri
       fonts:
@@ -135,9 +152,10 @@ flutter:
         - asset: assets/fonts/Tajawal/Tajawal-Regular.ttf
         - asset: assets/fonts/Tajawal/Tajawal-Bold.ttf
           weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+
+# ════════════════════════════════════════════════════════════════════════════════
+# FLUTTER GEN CONFIGURATION
+# ════════════════════════════════════════════════════════════════════════════════
 flutter_gen:
   output: lib/gen/
   line_length: 120
