--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,7 @@ dev_dependencies:
   build_runner: ^2.7.0
   freezed: ^3.0.0
   flutter_gen_runner: ^5.11.0
+  launcher_name: ^1.0.2
 
   # ──────────────────────────────────────────────────────────────────────────────
   # HTML & Web
@@ -162,4 +163,11 @@ flutter_gen:
   integrations:
     image: true
     flutter_svg: true
+
+# ════════════════════════════════════════════════════════════════════════════════
+# LAUNCHER NAME CONFIGURATION
+# ════════════════════════════════════════════════════════════════════════════════
+launcher_name:
+  default: "Seraj Aldean"
+  ar: "الشيخ عبدالله سراج الدين رحمه الله"
 
