*Abdullah (fixing the main card in the home + skiping the vedio with title فيديو نعي الشيخ الإمام في التلفزيون السوري)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -171,3 +171,10 @@ launcher_name:
   default: "Seraj Aldean"
   ar: "الشيخ عبدالله سراج الدين رحمه الله"
 
+
+
+flutter_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icons/app_icon48.png"
