--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   # ──────────────────────────────────────────────────────────────────────────────
   # Utilities & Helpers
   # ──────────────────────────────────────────────────────────────────────────────
+  flutter_expandable_fab: ^2.5.2
   flutter_gen: ^5.11.0
   google_fonts: ^6.3.1
   logger: ^2.6.1
