*Abdullah finshing the LAst Updates on The app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -180,4 +180,4 @@ flutter_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/icons/app_icon48.png"
+  image_path: "assets/icons/app_logo.png"
