--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,6 +13,8 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace = "com.swbai.serajaldeen"
+    // compileSdk should be at least 33 for Android 13+ support and MANAGE_EXTERNAL_STORAGE
+    // Flutter's compileSdkVersion is typically 34 or higher, which satisfies this requirement
     compileSdk = flutter.compileSdkVersion
     ndkVersion = "27.0.12077973"
 
