--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,9 +92,10 @@ dependencies:
   talker_flutter: ^5.0.0
 
   permission_handler: ^12.0.1
-  url_launcher: ^6.3.0
+  url_launcher: ^6.3.2
   share_plus: ^11.1.0
   rename: ^3.0.2
+  open_file: ^3.5.2
 
   # ──────────────────────────────────────────────────────────────────────────────
   # HTML & Web
@@ -107,6 +108,7 @@ dependencies:
   # ──────────────────────────────────────────────────────────────────────────────
   android_intent_plus: ^6.0.0
   google_maps_flutter: ^2.12.3
+  device_info_plus: 11.5.0
 
 # ════════════════════════════════════════════════════════════════════════════════
 # DEV DEPENDENCIES
